--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ node {
     stage('Shared') {
         
 
-                    bat(script: '@git submodule update --init --recursive')
+                  git submodule update --init --recursive
                 
             
     }
