--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,12 @@
 node {
     stage('Shared') {
-       
+        checkout scm
                 script {
                     bat(script: '@git submodule update --init --recursive')
                 }
-             
+            
     }
-load 'TestSubmodule/jenkinsfile'
-       
+
+        load 'TestSubmodule/jenkinsfile'
  
 }
