--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,6 @@
 pipeline {
 agent any
+ stages {
     stage('Shared') {
         checkout scm
                 script {
@@ -12,6 +13,6 @@ agent any
 	
 	}
 
-       
+       }
  
 }
